--- a/src/scss/_palette-red.scss
+++ b/src/scss/_palette-red.scss
@@ -1,3 +1,23 @@
-@use "mixins" as *;
+@import "../../node_modules/bootstrap/scss/functions";
 
-@include palette("red",  #dc3545);
+$primary:   #dc3545;
+$secondary: #6c757d;
+$success:   #198754;
+$info:      #0dcaf0;
+$warning:   #ffc107;
+$danger:    #dc3545;
+$light:     #f8f9fa;
+$dark:      #212529;
+
+$theme-colors: (
+        "primary":   $primary,
+        "secondary": $secondary,
+        "success":   $success,
+        "info":      $info,
+        "warning":   $warning,
+        "danger":    $danger,
+        "light":     $light,
+        "dark":      $dark
+);
+
+$theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
