feat: impl build for palletes and templates

--- a/src/scss/_palette-default.scss
+++ b/src/scss/_palette-default.scss
@@ -1,6 +1,6 @@
 @import "../../node_modules/bootstrap/scss/functions";
 
-$primary:   #0d6efd;
+$primary: #307cef;
 $secondary: #6c757d;
 $success:   #198754;
 $info:      #0dcaf0;
