--- a/src/scss/_palette-red.scss
+++ b/src/scss/_palette-red.scss
@@ -1,6 +1,6 @@
 @import "../../node_modules/bootstrap/scss/functions";
 
-$primary:   #dc3545;
+$primary: #d74e5c;
 $secondary: #6c757d;
 $success:   #198754;
 $info:      #0dcaf0;
