--- a/src/scss/_palette-green.scss
+++ b/src/scss/_palette-green.scss
@@ -1,8 +1,8 @@
 @import "../../node_modules/bootstrap/scss/functions";
 
-$primary:   #198754;
+$primary: #4a9f76;
 $secondary: #6c757d;
-$success:   #198754;
+$success: #009851;
 $info:      #0dcaf0;
 $warning:   #ffc107;
 $danger:    #dc3545;
