--- a/src/scss/_palette-orange.scss
+++ b/src/scss/_palette-orange.scss
@@ -2,7 +2,7 @@
 
 $primary:   #fd7e14;
 $secondary: #6c757d;
-$success:   #20c997;
+$success:    #198754;
 $info:      #0dcaf0;
 $warning:   #ffc107;
 $danger:    #dc3545;
