--- a/src/scss/_theme-light.scss
+++ b/src/scss/_theme-light.scss
@@ -1,2 +1,21 @@
-$theme-light-bg: #ffffff;
-$theme-light-text: #212529;
+$theme-light-vars: (
+        body-bg: #ffffff,
+        body-color: #111111,
+        heading-color: #000000,
+        border-color: #dee2e6,
+        text-color: #212529,
+        table-color: #212529,
+        table-bg: #ffffff,
+        table-border-color: #dee2e6,
+        table-hover-bg: rgba(0, 0, 0, 0.075),
+        table-striped-bg: rgba(0, 0, 0, 0.05),
+        table-active-bg: rgba(0, 0, 0, 0.1),
+        table-caption-color: #6c757d,
+        toast-bg: #fff,
+        toast-color: #131313,
+        toast-header-bg: #fff,
+        toast-header-color: #6c757d,
+        muted-color: #6c757d,
+        emphasis-color: #000000,
+btn-text-color: #000000,
+);
